namespace resource_reservation_system_backend.Enums;

public enum Status
{
  PENDING,
  APPROVED,
  DENIED,
  CANCELLED,
  ONGOING,
  MOVED
}
